--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="138****8039"
-            android:textColor="@color/black"/>
+            android:textColor="@color/white"/>
         <TextView
             android:id="@+id/header_member"
             android:layout_width="wrap_content"
