--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/item_home"
-        android:checked="true"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/main_home" />
+    <!--<item-->
+        <!--android:id="@+id/item_home"-->
+        <!--android:checked="true"-->
+        <!--android:icon="@drawable/ic_home_black_24dp"-->
+        <!--android:title="@string/main_home" />-->
 
-    <item
-        android:id="@+id/item_category"
-        android:icon="@drawable/ic_category_black_24dp"
-        android:title="@string/main_category" />
+    <!--<item-->
+        <!--android:id="@+id/item_category"-->
+        <!--android:icon="@drawable/ic_category_black_24dp"-->
+        <!--android:title="@string/main_category" />-->
 
-    <item
-        android:id="@+id/item_videos"
-        android:icon="@drawable/videos"
-        android:title="@string/main_videos" />
+    <!--<item-->
+        <!--android:id="@+id/item_videos"-->
+        <!--android:icon="@drawable/videos"-->
+        <!--android:title="@string/main_videos" />-->
 
     <item
         android:id="@+id/item_welfare"
@@ -23,6 +23,6 @@
     <item
         android:id="@+id/item_reading"
         android:icon="@drawable/ic_reading_black_24dp"
-        android:title="@string/main_reading" />
+        android:title="@string/main_episode" />
 
 </menu>
