--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/tab_bottom"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_gravity="bottom"
             android:background="@color/gray"
             app:menu="@menu/menu_bottom_navigation"
