--- a/app/src/main/res/layout/fragment_episode.xml
+++ b/app/src/main/res/layout/fragment_episode.xml
@@ -5,5 +5,6 @@
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:textColor="@color/blue"
     android:text="这是段子"/>
 </LinearLayout>
