--- a/app/src/main/res/layout/activity_big_pic.xml
+++ b/app/src/main/res/layout/activity_big_pic.xml
@@ -28,6 +28,7 @@
         app:progress_unreached_color="#00F7C6B7"
         android:layout_above="@+id/photo_download"
         android:layout_centerInParent="true"
+        android:visibility="gone"
         />
 
 </RelativeLayout>
