--- a/app/src/main/res/layout/activity_big_pic.xml
+++ b/app/src/main/res/layout/activity_big_pic.xml
@@ -6,17 +6,20 @@
     android:layout_height="match_parent"
     tools:context="win.tommy.tusha.ui.activity.BigPicActivity">
 
-    <uk.co.senab.photoview.PhotoView
-        android:id="@+id/photo_img"
+    <win.tommy.tusha.widget.HackyViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"/>
+
     <ImageView
         android:id="@+id/photo_download"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/download"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@mipmap/ic_action_download"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"/>
     <win.tommy.tusha.widget.progress.HorizontalProgressBarWithNumber
         android:id="@+id/photo_progress"
         android:layout_width="match_parent"
