--- a/app/src/main/res/layout/activity_big_pic.xml
+++ b/app/src/main/res/layout/activity_big_pic.xml
@@ -20,18 +20,18 @@
         android:layout_alignParentEnd="true"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"/>
-    <win.tommy.tusha.widget.progress.HorizontalProgressBarWithNumber
-        android:id="@+id/photo_progress"
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:background="@color/black"
-        android:padding="5dp"
-        app:progress_reached_bar_height="3dp"
-        app:progress_text_color="@color/blue"
-        app:progress_unreached_color="#00F7C6B7"
-        android:layout_above="@+id/photo_download"
-        android:layout_centerInParent="true"
-        android:visibility="gone"
-        />
+    <!--<win.tommy.tusha.widget.progress.HorizontalProgressBarWithNumber-->
+        <!--android:id="@+id/photo_progress"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="5dp"-->
+        <!--android:background="@color/black"-->
+        <!--android:padding="5dp"-->
+        <!--app:progress_reached_bar_height="3dp"-->
+        <!--app:progress_text_color="@color/blue"-->
+        <!--app:progress_unreached_color="#00F7C6B7"-->
+        <!--android:layout_above="@+id/photo_download"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:visibility="gone"-->
+        <!--/>-->
 
 </RelativeLayout>
